<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    xmlns:fontawesometext="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_login"
    android:orientation="vertical" >

    <!--
         padding 内边距   layout_margin 外边距  
        android:layout_alignParentTop 布局的位置是否处于顶部
    -->

    <RelativeLayout
        android:id="@+id/purse_pos_div"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dip"
        android:background="@drawable/background_login_div"
        android:padding="15dip" >

        <!-- 交易金额 -->

        <TextView
            android:id="@+id/purse_pos_amount_txt"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/purse_pos_amount_txt"
            android:textSize="20sp" />

        <com.zc.app.bootstrap.BootstrapEditText
            android:id="@+id/purse_pos_amount_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/purse_pos_amount_txt"
            android:layout_toRightOf="@id/purse_pos_amount_txt"
            android:hint="@string/purse_pos_amount_hint"
            bootstrapbutton:be_roundedCorners="true"
            bootstrapbutton:be_state="success" />

        <!-- 钱包余额 -->

        <TextView
            android:id="@+id/purse_pos_balance_txt"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignLeft="@id/purse_pos_amount_txt"
            android:layout_below="@id/purse_pos_amount_txt"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/purse_pos_balance_txt"
            android:textSize="20sp" />

        <com.zc.app.bootstrap.BootstrapEditText
            android:id="@+id/purse_pos_balance_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/purse_pos_amount_edit"
            android:layout_alignTop="@id/purse_pos_balance_txt"
            android:layout_below="@id/purse_pos_amount_edit"
            android:hint="@string/purse_pos_balance_hint"
            bootstrapbutton:be_roundedCorners="true"
            bootstrapbutton:be_state="success" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/purse_pos_balance_txt"
            android:layout_alignRight="@id/purse_pos_balance_edit"
            android:layout_below="@id/purse_pos_balance_edit"
            android:layout_marginTop="15dp" >

            <TextView
                android:id="@+id/purse_pos_hint_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:text="@string/purse_pos_hint_txt"
                android:textColor="#888"
                android:textSize="12sp" />

            <!-- 消费 -->

            <com.zc.app.bootstrap.BootstrapButton
                android:id="@+id/purse_pos_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/purse_pos_hint_txt"
                android:layout_marginTop="15dp"
                android:text="@string/purse_pos_button_text"
                android:textSize="20sp"
                bootstrapbutton:bb_roundedCorners="true"
                bootstrapbutton:bb_type="success" />
        </RelativeLayout>
    </RelativeLayout>

    <com.zc.app.mpos.view.MyKeyboardView
        android:id="@+id/keyboard_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="10dip"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="visible" />

</LinearLayout>